cabal-version:       2.2
name:                AlON
version:             0
synopsis:            A functional reactive site management/generation framework.
-- description:         
homepage:            http://xkcd.com/
license:             BSD-3-Clause
license-file:        LICENSE
author:              davean
maintainer:          davean@xkcd.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
          AlON
        , AlON.Types
        , AlON.Source
        , AlON.Transforms
        , AlON.Run
        , AlON.WebServer
        , AlON.Manipulation
  build-depends:
        base ^>=4.12
      , deepseq
      , time >= 1.5
      , mtl
      , stm
      , bytestring
      , containers
      , equeue
      , unordered-containers
      , monad-loops
      , dependent-sum == 0.4.*
      , dependent-map
      , reflex
      , reflex-files
      , reflex-time
      , fsnotify
      , list-tries
      , filepath
      , conduit
      , conduit-combinators
      , resourcet
      , time
      , directory
      , wai
      , wai-extra
      , wai-cors
      , warp
      , base16-bytestring
      , skein
      , crypto-api
      , cereal
      , blaze-builder
      , http-types
      , text
      , parsec
      , mustache
      , process >= 1.4.0.0
      , safe

executable mini-site
  default-language:    Haskell2010
  ghc-options: -rtsopts -with-rtsopts=-T
  main-is:             Main.hs
  build-depends:
        base
      , AlON
      , stm
      , mtl
      , dependent-sum
      , time
      , reflex
      , ref-tf
      , dependent-map
      , list-tries
      , system-filepath
      , bytestring
      , monad-loops
      , warp
      , text
      , stm

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:             Test.hs
  default-language:    Haskell2010
  ghc-options: -rtsopts -with-rtsopts=-T
  build-depends:
        base
      , AlON
      , stm
      , mtl
      , dependent-sum
      , time
      , reflex
      , reflex-test
      , ref-tf
      , dependent-map
      , list-tries
      , system-filepath
      , bytestring
      , monad-loops
      , warp
      , text
      , tasty ^>= 1.1
      , tasty-hunit ^>= 0.10
