cabal-version:       2.4
name:                AlON
version:             0
synopsis:            A functional reactive site management/generation framework.
-- description:         
homepage:            http://xkcd.com/
license:             BSD-3-Clause
license-file:        LICENSE
author:              davean
maintainer:          davean@xkcd.com
copyright:           Copyright (C) 2019 davean
category:            Web, FRP
build-type:          Simple
-- extra-source-files:  

common deps
  default-language:    Haskell2010
  build-depends:
        base ^>=4.12
      , base16-bytestring
      , blaze-builder
      , bytestring
      , cereal
      , containers
      , crypto-api
      , deepseq
      , dependent-sum == 0.4.*
      , dependent-map
      , equeue
      , filepath
      , http-types
      , list-tries
      , monad-loops
      , mtl
      , mustache
      , parsec
      , reflex
      , reflex-files
      , reflex-time
      , resourcet
      , safe
      , skein
      , stm
      , text
      , time >= 1.5
      , unordered-containers
      , wai
      , wai-extra
      , wai-cors
      , warp

library
  import: deps
  hs-source-dirs:      src
  exposed-modules:
          AlON
        , AlON.Types
        , AlON.Source
        , AlON.Transform
        , AlON.Run
        , AlON.WebServer
        , AlON.Manipulation

executable mini-site
  import: deps
  ghc-options: -rtsopts -with-rtsopts=-T
  main-is:             Main.hs
  build-depends:
      AlON

test-suite test
  import: deps
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:             Test.hs
  ghc-options: -rtsopts -with-rtsopts=-T
  build-depends:
        AlON
      , reflex-test
      , tasty ^>= 1.2
      , tasty-hunit ^>= 0.10
