cabal-version:       2.4
name:                AlON
version:             0
synopsis:            A functional reactive site management/generation framework.
-- description:         
homepage:            http://xkcd.com/
license:             BSD-3-Clause
license-file:        LICENSE
author:              davean
maintainer:          davean@xkcd.com
copyright:           Copyright (C) 2019 davean
category:            Web, FRP
build-type:          Simple
-- extra-source-files:  

common deps
  default-language:    Haskell2010
  build-depends:
        AlON-diff
      , attoparsec
      , base >=4.11 && < 4.17
      , base16-bytestring
      , blaze-builder
      , blaze-html
      , bytestring
      , cereal
      , containers
      , case-insensitive
      , crypto-api
      , deepseq
      , dependent-sum == 0.7.*
      , dependent-map
      , equeue
      , filepath
      , http-types
      , list-tries
      , machines
      , mime
      , mmorph
      , monad-loops
      , mtl
      , mustache
      , parsec
      , reflex
      , reflex-files
      , reflex-time
      , resourcet
      , safe
      , skein
      , stm
      , tar
      , text
      , time >= 1.9
      , transformers
      , unordered-containers
      , wai
      , wai-extra
      , wai-cors
      , warp
      , witherable ^>= 0.4
      , yaml

library
  import: deps
  hs-source-dirs:      src
  exposed-modules:
          AlON
        , AlON.ContentType.HTML
        , AlON.ContentType.StaticFile
        , AlON.Manipulation
        , AlON.Run
        , AlON.Source
        , AlON.Static
        , AlON.Transform
        , AlON.Types
        , AlON.WebServer

executable mini-site
  import: deps
  ghc-options: -rtsopts -with-rtsopts=-T
  main-is:             Main.hs
  build-depends:
      AlON

executable Gallery
  import: deps
  ghc-options: -rtsopts -with-rtsopts=-T
  main-is:             Gallery.hs
  build-depends:
      AlON

test-suite test
  import: deps
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:             Test.hs
  ghc-options: -rtsopts -with-rtsopts=-T
  build-depends:
        AlON
      , reflex-test
      , tasty >= 1.2 && < 1.5
      , tasty-hunit ^>= 0.10
      , tasty-test-vector ^>= 0
